--- a/docker.env
+++ b/docker.env
@@ -3,3 +3,9 @@ POSTGRES_USER=ecommerce_user
 POSTGRES_PASSWORD=ecommerce_password
 POSTGRES_DB=ecommerce_db
 POSTGRES_PORT=5432
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USER=jiwoong_user
+REDIS_PASSWORD=jiwoong_password
+REDIS_TTL=3600
