redis problem solved

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
       - docker.env
     ports:
       - "5432:5432"
+
   ecommerce_redis:
     container_name: ecommerce_redis
-    image: 'redis:alpine'
+    image: redis:alpine
     env_file:
       - docker.env
     ports:
