--- a/docker.env
+++ b/docker.env
@@ -6,6 +6,12 @@ POSTGRES_PORT=5432
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_USER=jiwoong_user
-REDIS_PASSWORD=jiwoong_password
+#REDIS_USER=jiwoong_user
+#REDIS_PASSWORD=jiwoong_password
 REDIS_TTL=3600
+
+#postgres_host와 redis_host가 같으면 안될수도 있다고 해서 위에를 ecommerce_pg로 바꿔봤지만 안됨
+#docker.env가 아니라 그냥 .env로 했는데 안됨
+#'redis:alpine'에서 ''없앴는데 안됨
+# port를 숫자로 써줬는데 안됨
+# redis:latest로 바꿔봤는데 안됨
