--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -14,6 +14,7 @@
       "@auth/*": ["./src/auth/*"],
       "@product/*": ["./src/product/*"],
       "@order/*": ["./src/order/*"],
+      "@profile/*": ["./src/profile/*"],
 
 
     }
