--- a/docker.env
+++ b/docker.env
@@ -10,3 +10,7 @@ REDIS_PORT=6379
 #REDIS_PASSWORD=jiwoong_password
 REDIS_TTL=3600
 
+MINIO_PORT=9000
+MINIO_ROOT_USER=user
+MINIO_ROOT_PASSWORD=password
+MINIO_DEFAULT_BUCKETS=ecommerce
