--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+
+  ecommerce_backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: development
+    volumes:
+      - .:/usr/src/app
+    env_file:
+      - .env
+    command: npm run start:dev
+    ports:
+      - ${SERVER_PORT}:${SERVER_PORT}
+    depends_on:
+      - ecommerce_pg
+      - ecommerce_redis
+    networks:
+      - ecommerce-network
+
   ecommerce_pg:
     container_name: ecommerce_pg
     image: postgres:latest
@@ -6,7 +25,9 @@ services:
     env_file:
       - docker.env
     ports:
-      - "5432:5432"
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    networks:
+      - ecommerce-network
 
   ecommerce_redis:
     container_name: ecommerce_redis
@@ -15,6 +36,8 @@ services:
       - docker.env
     ports:
       - ${REDIS_PORT}:${REDIS_PORT}
+    networks:
+      - ecommerce-network
 
   ecommerce_minio:
     image: docker.io/bitnami/minio:2022
@@ -24,3 +47,10 @@ services:
       - "9000:9000"
       - "9001:9001"
     platform: linux/amd64
+
+    networks:
+      - ecommerce-network
+
+networks:
+  ecommerce-network:
+    driver: bridge
