--- a/docker.env
+++ b/docker.env
@@ -1,10 +1,10 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST=ecommerce_pg
 POSTGRES_USER=ecommerce_user
 POSTGRES_PASSWORD=ecommerce_password
 POSTGRES_DB=ecommerce_db
 POSTGRES_PORT=5432
 
-REDIS_HOST=localhost
+REDIS_HOST=ecommerce_redis
 REDIS_PORT=6379
 #REDIS_USER=jiwoong_user
 #REDIS_PASSWORD=jiwoong_password
