--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+  ecommerce_nginx:
+    build:
+      context: .
+      dockerfile: ./nginx/Dockerfile
+    container_name: ecommerce_nginx
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    environment:
+      - .env
+    ports:
+      - ${NGINX_PORT}:${NGINX_PORT}
+    restart: always
+    depends_on:
+      - ecommerce_backend
+    networks:
+      - ecommerce-network
 
   ecommerce_backend:
     build:
